--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,6 @@ Auto-suggest styles
 /* HTML */
 html {
   font-family: 'Roboto', serif;
-  font-size: 62.5%;
 }
 
 /* Body */
@@ -81,12 +80,14 @@ h1 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
   font-size: 6.5rem;
   margin: 0;
+  font-size: 1.7rem;
 }
 
 h2 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
-  font-size: 6.5rem;
+  font-size: 1.4rem;
   margin: 0;
+  margin-bottom: 0.3rem;
 }
 
 th {
@@ -99,17 +100,12 @@ th {
 }
 
 /* Divs */
-div {
-  margin: 0;
-  padding-bottom: 2rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 
 div h1 {
   margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
+
 
 /* Buttons */
 button {
@@ -117,12 +113,10 @@ button {
   background: #0093E9;
   border: white;
   margin-bottom: 0.5rem;
-  border-radius: 4rem;
-  margin-top: 0.5rem;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  height: 8rem;
-  font-size: 5rem;
+  margin-top: 1.5rem;
+  padding: 0.7rem 1.1rem;
+  border-radius: 0.8rem;
+  font-size: 1.5rem;
 }
 
 button:hover {
@@ -137,16 +131,11 @@ button:hover {
 
 /* Paragraph */
 p {
-  font-size: 4rem;
   margin-bottom: 1rem;
   margin-right: 3rem;
 }
 
 /* Form */
-input {
-  font-family: 'Roboto', serif;
-  font-size: 4rem;
-}
 
 input[type="checkbox" i] {
   margin-top: 1rem;
@@ -154,16 +143,14 @@ input[type="checkbox" i] {
   width: 5rem;
 }
 
-input[type="submit" i] {
+input[type="submit"] {
   background: #0093E9;
   color: #ffffff;
   border: #ffffff;
-  border-radius: 4rem;
-  margin-top: 0.5rem;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  height: 8rem;
-  font-size: 5rem;
+  border-radius: 0.8rem;
+  margin-top: 0.9rem;
+  padding: 0.4rem 1rem 0.6rem;
+  font-size: 1.5rem;
   box-shadow: none;
   border-style: solid;
   -webkit-appearance: none;
@@ -187,7 +174,6 @@ input[type="text"] {
   margin-top: 0.5rem;
   padding-left: 4rem;
   padding-right: 4rem;
-  height: 8rem;
   font-size: 5rem;
   box-shadow: none;
   border-style: solid;
@@ -196,13 +182,6 @@ input[type="text"] {
 
 .submit:hover {
   background: #80D0C7;
-}
-
-.input-box {
-  width: 83vw;
-  height: 6rem;
-  margin-bottom: 1rem;
-  font-size: 4rem;
 }
 
 /* Page Content */
@@ -234,13 +213,14 @@ table {
 
 table.list tr td {
   border: 1px solid #999999;
-  font-size: 4.5rem;
+  font-size: 1.4rem;
 }
 
 table.list tr th {
   background: #0093E9;
   color: white;
-  font-size: 4rem;
+  font-size: 1.5rem;
+  border: 1px solid #0093E9;
 }
 
 tr#headerRow {
@@ -289,19 +269,6 @@ ul#suggestions li a:hover {
   height: 300px;
 }
 
-li {
-  font-size: 5rem;
-  list-style-type: none;
-}
-
-.main-menu {
-  font-size: 7rem;
-}
-
-.action {
-  font-size: 4.5rem;
-}
-
 .table-action {
   font-size: 4rem;
 }
@@ -310,16 +277,10 @@ dt {
   font-size: 4rem;
 }
 
-select {
-  font-size: 4rem;
-}
-
-.back-link {
-  font-size: 4rem;
-}
-
 dd {
   font-size: 4rem;
+  margin-left: 0;
+  margin-top: 0.9rem;
 }
 
 strong {
@@ -330,121 +291,100 @@ strong {
   padding-right: 3rem;
 }
 
-@media (hover: hover) {
 
-  li {
-    font-size: 2rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
-  .main-menu h2 {
-    font-size: 2.5rem;
-  }
-
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  .main-menu {
-    font-size: 2rem;
-  }
-
-  .input-box {
-    height: 3.5rem;
-    max-width: 65rem;
-    font-size: 2rem;
-  }
-
-  div h1 {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  button {
-    font-size: 2rem;
-    height: 4rem;
-    margin-top: 1.5rem;
-  }
-
-  .reset-password-button {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    max-width: 65rem;
-    font-size: 2rem;
-  }
-
-  input[type="submit"] {
-    height: 4rem;
-    font-size: 2rem;
-  }
-
-  .action {
-    font-size: 2rem;
-    line-height: 1.2rem;
-  }
-
-  .actions {
-    padding-left: 0rem;
-  }
-
-  table.list tr td {
-    border: 1px solid #999999;
-    font-size: 2rem;
-  }
-
-  .table-action {
-    font-size: 2rem;
-  }
-
-  table.list tr th {
-    background: #0093E9;
-    color: white;
-    font-size: 2rem;
-    text-align: left;
-  }
-
-  .back-link {
-    font-size: 2rem;
-  }
-
-  dt {
-    font-size: 2rem;
-  }
-
-  select {
-    font-size: 2rem;
-  }
-
-  input {
-    font-size: 2rem;
-  }
-
-  input[type="checkbox" i] {
-    margin-top: 1rem;
-    height: 3.2rem;
-    width: 3.2rem;
-    cursor: pointer;
-  }
-
-  #message {
-    font-size: 2rem;
-  }
-
-  dd {
-    font-size: 2rem;
-  }
-
-  strong {
-    font-size: 2rem;
-  }
-
+li {
+  font-size: 1.5rem;
+  list-style-type: none;
 }
+
+.main-menu h2 {
+  font-size: 2.5rem;
+}
+
+.input-box {
+  margin-bottom: 1rem;
+  height: 2.8rem;
+  max-width: 65rem;
+  font-size: 1.7rem;
+}
+
+.reset-password-button {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  max-width: 65rem;
+  font-size: 1.4rem;
+}
+
+.action {
+  line-height: 1.2rem;
+}
+
+.actions {
+  padding-left: 0rem;
+}
+
+table.list tr td {
+  border: 1px solid #999999;
+}
+
+.table-action {
+  font-size: 2rem;
+}
+
+table.list tr th {
+  background: #0093E9;
+  color: white;
+  text-align: left;
+}
+
+.back-link {
+  font-size: 1.2rem;
+}
+
+dt {
+  font-size: 2rem;
+}
+
+select {
+  font-size: 1.3rem;
+}
+
+select:hover {
+  cursor: pointer;
+}
+
+input {
+  font-family: 'Roboto', serif;
+  font-size: 1.3rem;
+  display: block;
+}
+
+input:hover {
+  cursor: pointer;
+}
+
+input[type="checkbox" i] {
+  margin-top: 1rem;
+  height: 2.2rem;
+  width: 2.2rem;
+  cursor: pointer;
+}
+
+#message {
+  font-size: 2rem;
+}
+
+dd {
+  font-size: 2rem;
+}
+
+strong {
+  font-size: 2rem;
+}
+
 
 .header-link {
   text-decoration: none;
@@ -489,8 +429,44 @@ strong {
 td,
 th {
   padding: 2px 5px;
+  max-width: 40ch;
 }
 
 #operations {
   padding-left: 0;
+}
+
+td.playerName {
+  min-width: 18ch;
+  max-width: 20ch;
+}
+
+@media (max-width: 750px) {
+  td.playerName {
+    min-width: 9ch;
+  }
+
+  td.date {
+    min-width: 5ch;
+  }
+}
+
+div#message {
+  padding: 1.4rem 3rem;
+}
+
+label {
+  display: block;
+  margin: 1rem 0 0.5rem;
+}
+
+#content {
+  margin: 0;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+td.date {
+  min-width: 10ch;
 }
