--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,12 +40,10 @@ body {
 /* Header and Footer */
 header {
   background-image: linear-gradient(to right, #0093E9, #80D0C7);
-  padding-left: 3rem;
-  padding-top: 1.6rem;
-  padding-right: 3rem;
-  padding-bottom: 1.6rem;
+  padding: 1.1rem 3rem;
   margin: 0;
   color: white;
+  font-size: 1.4rem;
 }
 
 footer {
@@ -89,16 +87,14 @@ ul {
 /* Headings */
 h1 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
-  font-size: 6.5rem;
-  margin: 0;
   font-size: 1.7rem;
+  margin: 0.8rem 0 0.5rem 0;
 }
 
 h2 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
-  margin: 0;
-  margin-bottom: 0.3rem;
+  margin: 0 0 0.7rem 0;
 }
 
 .main-menu h2 {
@@ -161,9 +157,8 @@ input[type="submit"] {
   border-radius: 0.8rem;
   margin-top: 0.9rem;
   padding: 0.4rem 1rem 0.6rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   box-shadow: none;
-  border-style: solid;
   -webkit-appearance: none;
 }
 
@@ -352,7 +347,6 @@ strong {
 }
 
 li {
-  font-size: 1.5rem;
   list-style-type: none;
 }
 
@@ -453,7 +447,7 @@ label {
   margin: 1rem 0 0.5rem;
 }
 
-#content {
+main {
   margin: 0;
   padding-bottom: 2rem;
   padding-left: 3rem;
@@ -461,5 +455,5 @@ label {
 }
 
 a.back-link {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
