--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,8 +111,8 @@ h2 {
 /* Divs */
 
 div h1 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  margin-top: 1.2rem;
+  margin-bottom: 0.9rem;
 }
 
 
@@ -233,7 +233,6 @@ table.list tr td {
 table.list tr th {
   background: #0093E9;
   color: white;
-  font-size: 1.5rem;
   border: 1px solid #0093E9;
 }
 
@@ -314,8 +313,8 @@ dt {
   color: #0093E9;
   background: white;
   border: 2px solid #0093E9;
-  font-size: 2rem;
-  padding: 1.4rem 3rem;
+  padding: 0.7rem 3rem;
+  margin-bottom: 0.6rem;
 }
 
 /* Auto-suggest styles */
@@ -384,6 +383,7 @@ table a.action {
 
 select {
   font-size: 1.3rem;
+  max-width: 90vw;
 }
 
 select:hover {
@@ -457,4 +457,8 @@ main {
 
 a.back-link {
   font-size: 1.3rem;
+}
+
+dl {
+  margin-bottom: 1.6rem;
 }
