--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ footer h2 {
 nav {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.8rem;
+  gap: 1.1rem;
   margin-left: 3rem;
   margin-bottom: 0.7rem;
   margin-top: 0.7rem;
@@ -501,4 +501,9 @@ tr#header {
 
 td.name {
   max-width: 40ch;
+}
+
+tr.header-row {
+  position: sticky;
+  top: 0;
 }
