--- a/ui/style.css
+++ b/ui/style.css
@@ -66,7 +66,8 @@ footer h2 {
 nav {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.1rem;
+  column-gap: 1.3rem;
+  row-gap: 0.4rem;
   margin-left: 3rem;
   margin-bottom: 0.7rem;
   margin-top: 0.7rem;
