start to add one to many sweet spot editing for artifacts

--- a/ui/style.css
+++ b/ui/style.css
@@ -524,3 +524,13 @@ tr.header-row {
   position: sticky;
   top: 0;
 }
+
+button.sweetSpot {
+  margin-top: 0.6rem;
+  margin-bottom: 0;
+  padding: 0.5rem 0.9rem;
+}
+
+input.sweetSpot {
+  display: inline;
+}
