add margin left to nav

--- a/ui/style.css
+++ b/ui/style.css
@@ -69,6 +69,7 @@ nav {
   column-gap: 1.3rem;
   row-gap: 0.4rem;
   margin-left: 3rem;
+  margin-right: 1rem;
   margin-bottom: 0.7rem;
   margin-top: 0.7rem;
 }
