update class name references

--- a/ui/style.css
+++ b/ui/style.css
@@ -569,12 +569,12 @@ textarea {
   cursor: pointer;
 }
 
-.userResults li {
+.user li {
   border: 1px solid ivory;
   padding: 0 0.1rem;
 }
 
-.userResults li:hover {
+.user li:hover {
   background-color: white;
   border: 1px solid black;
   cursor: pointer;
